# better-auth-sample

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_sessions_table.rs  m20240101_000003_create_accounts_table.rs  m20240101_000004_create_verifications_table.rs  m20240101_000005_create_posts_table.rs
backend/src/: main.rs
backend/src/entity/: accounts.rs  mod.rs  posts.rs  prelude.rs  sessions.rs  users.rs  verifications.rs
backend/src/middleware/: auth.rs
backend/src/routes/: mod.rs  protected.rs  public.rs
docs/: 01_architecture.md  02_better-auth-guide.md  03_database-schema.md  04_api-specification.md  05_setup-guide.md  06_withdraw-implementation.md  07_implementation-plan.md
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/raw-login/: page.tsx
frontend/src/app/(auth)/raw-signup/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/components/auth/: BaseLoginForm.tsx  BaseSignupForm.tsx  ForgotPasswordForm.tsx  LoginForm.tsx  LogoutButton.tsx  RawLoginForm.tsx  RawSignupForm.tsx  RegisterForm.tsx  ResetPasswordForm.tsx  SocialButtons.tsx  WithdrawButton.tsx
frontend/src/db/: schema.ts
frontend/src/lib/: auth-client.ts  auth.ts
(+7 files in other folders)
